# test-rs-stm32

./: Cargo.toml  Embed.toml  memory.x
.cargo/: config.toml
src/: main.rs
